# backpacking-map

./: .gitignore  Dockerfile  README.md  docker-bake.hcl  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: example.py  main.py
app/config/: __init__.py  config.py
app/db/: __init__.py  hero.py  initialize.py
app/http/: __init__.py  endpoints.py
eks/: auth.yaml  cd-role.yaml  deployment.yaml  ingress.yaml  role-binding.yaml  service.yaml
kustomize/base/: ingress.yaml  kustomization.yaml
kustomize/base/example/: deployment.yaml  kustomization.yaml  service.yaml
kustomize/components/: kustomization.yaml
kustomize/components/postgres/: configMap.yaml  kustomization.yaml  persistentVolume.yaml  persistentVolumeClaim.yaml  service-read.yaml  service.yaml  statefulSet.yaml
kustomize/overlays/dev/: kustomization.yaml
tests/: test_example.py
tests/config/: test_config.py
tests/db/: hero.py  test_hero.py  test_initialize.py
tests/http/: test_endpoints.py
