[tool.poetry]
name = "ibn-battuta"
version = "0.1.0"
description = "A Gift Those Who Contemplate the Wonders of Cities and the Marvels of Travelling"
authors = ["Evgeniy Ivlev"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydebug = "^1.0.3"
debugpy = "^1.7.0"
psycopg2-binary = "^2.9.7"
sqlmodel = "^0.0.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
requests = "^2.31.0"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
